Fix the header spacing and lack of spacing on the ratings page

--- a/css/polldaddy.css
+++ b/css/polldaddy.css
@@ -27,9 +27,16 @@
 }
 
 #manage-polls {
-	margin-left: -20px;
 	margin-right: 0;
 	margin-top: 0;
+}
+
+.polls-wrap {
+	margin-left: -20px;
+}
+
+.ratings-wrap {
+	margin-left: 0px;
 }
 
 @media screen and (max-width: 782px) {
@@ -52,6 +59,11 @@ h2#polldaddy-header, h2#poll-list-header {
 	display: inline-block;
 }
 
+.cs-pre-wrap {
+	background: white;
+	height: 30px;
+}
+
 .cs-wrapper {
 	clear: both;
 	display: flex;
@@ -61,6 +73,10 @@ h2#polldaddy-header, h2#poll-list-header {
 }
 
 @media screen and (max-width: 782px) {
+	.cs-pre-wrap {
+		height: 60px;
+	}
+
 	.cs-wrapper {
 		min-height: calc(100% - 60px);
 	}
